--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
     <script src="js/knockout-3.4.0.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/map.js"></script>
-    <script src="js/ListItem.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <title></title>
@@ -40,7 +39,7 @@
             </div>
             <div id="location-list">
                 <ul data-bind="foreach: listItems">
-                    <li data-bind="text: item.name,  visible: visible"></li>
+                    <li data-bind="text: item.name, visible: visible, click: $root.selectMarker"></li>
                 </ul>
             </div>
         </div>
