--- a/src/index.html
+++ b/src/index.html
@@ -27,25 +27,29 @@
         </div>
     </div>
 
+
     <div class="row" id="map-row">
-        <div class="col-md-3 navbar-toggleable-xs collapse" id="left-col">
-            <div class="filter input-group">
-                <input class="form-control" type="text" placeholder="Filter By Name" id="filter-input" data-bind="event: {keyup: filter}">
+        <div class="col-md-12" id="map-container">
+            <div class="navbar-toggleable-xs collapse" id="left-col">
+                <div class="filter input-group">
+                    <input class="form-control" type="text" placeholder="Filter By Name" id="filter-input"
+                           data-bind="event: {keyup: filter}">
                 <span class="input-group-btn">
                     <button type="button" class="btn btn-default" aria-label="Close" data-bind="click: removeFilter">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </span>
+                </div>
+                <div id="location-list">
+                    <ul data-bind="foreach: listItems">
+                        <li data-bind="text: item.name, visible: visible, click: $root.selectMarker"></li>
+                    </ul>
+                </div>
             </div>
-            <div id="location-list">
-                <ul data-bind="foreach: listItems">
-                    <li data-bind="text: item.name, visible: visible, click: $root.selectMarker"></li>
-                </ul>
-            </div>
-        </div>
-        <div class="col-md-9" id="map-container">
             <div id="map"></div>
+
         </div>
+
     </div>
 
 </div>
