bug: Marker Animation And Info Window Fix
Animations now end when different marker is selected. Info window now closes when filter is reset or same marker is clicked again.

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <div class="col-md-3 top-bar">
             <div class="navbar navbar-light bg-faded">
                 <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#left-col"
-                        aria-controls="left-col" aria-expanded="false" aria-label="Toggle navigation">
+                        aria-controls="left-col" aria-expanded="true" aria-label="Toggle navigation">
                     &#9776;
                 </button>
             </div>
@@ -30,7 +30,7 @@
 
     <div class="row" id="map-row">
         <div class="col-md-12" id="map-container">
-            <div class="navbar-toggleable-xs collapse" id="left-col">
+            <div class="navbar-toggleable-xs collapse in" id="left-col" aria-expanded="true">
                 <div class="filter input-group">
                     <input class="form-control" type="text" placeholder="Filter By Name" id="filter-input"
                            data-bind="event: {keyup: filter}">
