--- a/src/index.html
+++ b/src/index.html
@@ -2,20 +2,14 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <script
-            src="https://code.jquery.com/jquery-3.1.1.min.js"
-            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-            crossorigin="anonymous"></script>
-    <script src="js/knockout-3.4.0.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/map.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title></title>
+    <title>Mountain View Neighborhood</title>
 </head>
 <body>
 <div class="container">
-    <div class="row">
+    <header class="row">
         <div class="col-md-3 top-bar">
             <div class="navbar navbar-light bg-faded">
                 <button class="navbar-toggler hidden-sm-up" id="hamburger-collapse" type="button" data-toggle="collapse"
@@ -29,7 +23,7 @@
         <div class="col-md-9 top-bar">
 
         </div>
-    </div>
+    </header>
 
 
     <div class="row" id="map-row">
@@ -37,20 +31,22 @@
             <div class="navbar-toggleable-xs collapse in" id="left-col" aria-expanded="true">
                 <div class="filter input-group">
                     <input class="form-control" type="text" placeholder="Filter By Name" id="filter-input"
-                           data-bind="event: {keyup: filter}">
+                           data-bind="textInput: filterInput">
                 <span class="input-group-btn">
                     <button type="button" class="btn btn-default" aria-label="Close" data-bind="click: removeFilter">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </span>
                 </div>
-                <div id="location-list">
-                    <ul data-bind="foreach: listItems">
-                        <li data-bind="text: item.name, visible: visible, click: $root.selectMarker"></li>
+                <aside id="location-list">
+                    <ul data-bind="foreach: filteredLocations">
+                        <li data-bind="text: $data.name, click: $root.selectMarker"></li>
                     </ul>
-                </div>
+                </aside>
             </div>
-            <div id="map"></div>
+            <main id="map">
+
+            </main>
 
         </div>
 
@@ -58,12 +54,19 @@
 
 </div>
 
-
-<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkW6FCwPhwzhiHG48DbjzCFP_1lGXLQWA&v=3&callback=initMap">
-</script>
-<script async defer
+<script
+        src="https://code.jquery.com/jquery-3.1.1.min.js"
+        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+        crossorigin="anonymous"></script>
+<script src="js/knockout-3.4.0.js"></script>
+<script src="js/bootstrap.js"></script>
+<script src="js/map.js"></script>
+<script
         src="js/viewModel.js">
 </script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkW6FCwPhwzhiHG48DbjzCFP_1lGXLQWA&v=3&callback=initMap"
+        async defer onerror="mapError()">
+</script>
+
 </body>
 </html>
